[gd_scene load_steps=3 format=3 uid="uid://06gfu0uuxq6j"]

[ext_resource type="Script" path="res://worlds_example.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://clxkpcmdpql2b" path="res://moving_area.tscn" id="2"]

[node name="Node" type="Node"]
script = ExtResource("1")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
modulate = Color(0.976471, 0.909804, 0.909804, 1)
offset_left = 34.0
offset_top = 62.0
offset_right = 534.0
offset_bottom = 562.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(500, 500)
render_target_update_mode = 4

[node name="MovingArea3" parent="SubViewportContainer/SubViewport" instance=ExtResource("2")]
speed = 200.0

[node name="Area2D" parent="SubViewportContainer/SubViewport/MovingArea3" index="0"]
position = Vector2(200, 400)
_circle_color = Color(0, 0.12549, 0.803922, 0.247059)

[node name="Target1" parent="SubViewportContainer/SubViewport/MovingArea3" index="1"]
position = Vector2(200, 100)

[node name="Target2" parent="SubViewportContainer/SubViewport/MovingArea3" index="2"]
position = Vector2(250, 500)

[node name="ReferenceRect" type="ReferenceRect" parent="SubViewportContainer"]
layout_mode = 2

[node name="MovingArea1" parent="." instance=ExtResource("2")]
speed = 200.0

[node name="Area2D" parent="MovingArea1" index="0"]
position = Vector2(238, 308)
_circle_color = Color(0.721569, 0.00392157, 0.00392157, 0.247059)

[node name="Target1" parent="MovingArea1" index="1"]
position = Vector2(220, 586)

[node name="Target2" parent="MovingArea1" index="2"]
position = Vector2(370, 115)

[node name="MovingArea2" parent="." instance=ExtResource("2")]
speed = 200.0

[node name="Area2D" parent="MovingArea2" index="0"]
position = Vector2(368, 376)
_circle_color = Color(0.160784, 0.6, 0, 0.247059)

[node name="Target1" parent="MovingArea2" index="1"]
position = Vector2(19, 451)

[node name="Target2" parent="MovingArea2" index="2"]
position = Vector2(572, 431)

[node name="ButtonMoveArea1" type="Button" parent="."]
offset_left = 606.0
offset_top = 25.0
offset_right = 693.0
offset_bottom = 45.0
text = "move area1"

[node name="CheckButton" type="CheckButton" parent="."]
offset_left = 610.0
offset_top = 64.0
offset_right = 686.0
offset_bottom = 104.0
button_pressed = true
text = "area1 in SceneTree"

[connection signal="pressed" from="ButtonMoveArea1" to="." method="_on_ButtonMoveArea1_pressed"]
[connection signal="toggled" from="CheckButton" to="." method="_on_CheckButton_toggled"]

[editable path="SubViewportContainer/SubViewport/MovingArea3"]
[editable path="MovingArea1"]
[editable path="MovingArea2"]
